--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,12 +29,12 @@ dist.jar=${dist.dir}/Media Cataloguer.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.commons-codec-1.4.jar=lib/commons-codec-1.4.jar
-file.reference.commons-io-2.4.jar=lib/commons-io-2.4.jar
-file.reference.commons-lang3-3.1.jar=lib/commons-lang3-3.1.jar
-file.reference.commons-validator-1.4.0.jar=lib/commons-validator-1.4.0.jar
-file.reference.simmetrics.jar=lib/simmetrics.jar
-file.reference.xom-1.2.7.jar=lib/xom-1.2.7.jar
+file.reference.commons-codec-1.4.jar=../Common/lib/commons-codec-1.4.jar
+file.reference.commons-io-2.4.jar=../Common/lib/commons-io-2.4.jar
+file.reference.commons-lang3-3.1.jar=../Common/lib/commons-lang3-3.1.jar
+file.reference.commons-validator-1.4.0.jar=../Common/lib/commons-validator-1.4.0.jar
+file.reference.simmetrics.jar=../Common/lib/simmetrics.jar
+file.reference.xom-1.2.7.jar=../Common/lib/xom-1.2.7.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -67,10 +67,10 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
-javadoc.reference.commons-io-2.4.jar=../Learning Tests/apidocs/commons-io-2.4-javadoc.jar
-javadoc.reference.commons-lang3-3.1.jar=../Learning Tests/apidocs/commons-lang3-3.1-javadoc.jar
-javadoc.reference.commons-validator-1.4.0.jar=../Learning Tests/apidocs/commons-validator-1.4.0-javadoc.jar
-javadoc.reference.xom-1.2.7.jar=../Learning Tests/apidocs/xom-1.2.7.zip
+javadoc.reference.commons-io-2.4.jar=../Common/apidocs/commons-io-2.4-javadoc.jar
+javadoc.reference.commons-lang3-3.1.jar=../Common/apidocs/commons-lang3-3.1-javadoc.jar
+javadoc.reference.commons-validator-1.4.0.jar=../Common/apidocs/commons-validator-1.4.0-javadoc.jar
+javadoc.reference.xom-1.2.7.jar=../Common/apidocs/xom-1.2.7.zip
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -102,7 +102,7 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
-source.reference.commons-io-2.4.jar=../Learning Tests/lib-src/commons-io-2.4-sources.jar
-source.reference.commons-validator-1.4.0.jar=../Learning Tests/lib-src/commons-validator-1.4.0-sources.jar
+source.reference.commons-io-2.4.jar=../Common/lib-src/commons-io-2.4-sources.jar
+source.reference.commons-validator-1.4.0.jar=../Common/lib-src/commons-validator-1.4.0-sources.jar
 src.dir=src
 test.src.dir=test
