Lots of improvements and code cleaning

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,23 +29,25 @@ dist.jar=${dist.dir}/Media Cataloguer.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.commons-codec-1.4.jar=../Common/lib/commons-codec-1.4.jar
+file.reference.commons-codec-1.8.jar=../Common/lib/commons-codec-1.8.jar
 file.reference.commons-io-2.4.jar=../Common/lib/commons-io-2.4.jar
 file.reference.commons-lang3-3.1.jar=../Common/lib/commons-lang3-3.1.jar
 file.reference.commons-validator-1.4.0.jar=../Common/lib/commons-validator-1.4.0.jar
-file.reference.simmetrics.jar=../Common/lib/simmetrics.jar
-file.reference.xom-1.2.7.jar=../Common/lib/xom-1.2.7.jar
+file.reference.jsoup-1.7.2.jar=../Common/lib/jsoup-1.7.2.jar
+file.reference.simmetrics-1.6.2.jar=../Common/lib/simmetrics-1.6.2.jar
+file.reference.xom-1.2.10.jar=../Common/lib/xom-1.2.10.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.commons-lang3-3.1.jar}:\
+    ${file.reference.commons-codec-1.8.jar}:\
     ${file.reference.commons-io-2.4.jar}:\
-    ${file.reference.commons-codec-1.4.jar}:\
+    ${file.reference.commons-lang3-3.1.jar}:\
     ${file.reference.commons-validator-1.4.0.jar}:\
-    ${file.reference.xom-1.2.7.jar}:\
-    ${file.reference.simmetrics.jar}:\
+    ${file.reference.jsoup-1.7.2.jar}:\
+    ${file.reference.simmetrics-1.6.2.jar}:\
+    ${file.reference.xom-1.2.10.jar}:\
     ${reference.Victor_Utils.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:unchecked
@@ -67,10 +69,13 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.commons-codec-1.8.jar=../Common/apidocs/commons-codec-1.8-javadoc.jar
 javadoc.reference.commons-io-2.4.jar=../Common/apidocs/commons-io-2.4-javadoc.jar
 javadoc.reference.commons-lang3-3.1.jar=../Common/apidocs/commons-lang3-3.1-javadoc.jar
 javadoc.reference.commons-validator-1.4.0.jar=../Common/apidocs/commons-validator-1.4.0-javadoc.jar
-javadoc.reference.xom-1.2.7.jar=../Common/apidocs/xom-1.2.7.zip
+javadoc.reference.jsoup-1.7.2.jar=../Common/apidocs/jsoup-1.7.2-javadoc.jar
+javadoc.reference.simmetrics-1.6.2.jar=../Common/apidocs/simmetrics-1.6-javadoc.jar
+javadoc.reference.xom-1.2.10.jar=../Common/apidocs/xom-1.2.10-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -102,7 +107,12 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
+source.reference.commons-codec-1.8.jar=../Common/lib-src/commons-codec-1.8-sources.jar
 source.reference.commons-io-2.4.jar=../Common/lib-src/commons-io-2.4-sources.jar
+source.reference.commons-lang3-3.1.jar=../Common/lib-src/commons-lang3-3.1-sources.jar
 source.reference.commons-validator-1.4.0.jar=../Common/lib-src/commons-validator-1.4.0-sources.jar
+source.reference.jsoup-1.7.2.jar=../Common/lib-src/jsoup-1.7.2-sources.jar
+source.reference.simmetrics-1.6.2.jar=../Common/lib-src/simmetrics-1.6.2-sources.jar
+source.reference.xom-1.2.10.jar=../Common/lib-src/xom-1.2.10-sources.jar
 src.dir=src
 test.src.dir=test
