+ Added: Show version and build number whenever the application is run * Fixed: Avoid printing unnecessary console output separators * Fixed: Show more relevant information regarding to media requirement approval * Changed: Application suite name to WD TV Live Media Manager * Changed: Release candidate version number

--- a/src/lan/vandiemens/media/manager/version.properties
+++ b/src/lan/vandiemens/media/manager/version.properties
@@ -1,6 +1,8 @@
-#Wed, 20 Aug 2014 01:13:32 +0200
+#Fri, 26 Sep 2014 12:03:44 +0200
 # Media Manager Application version
 
-media.manager.title=Media Manager
-media.manager.version=1.0 RC16
-media.manager.build=177
+media.manager.title=WD TV Live Media Manager
+media.editor.title=Matroska Editor
+media.subtitle.extractor.title=Matroska Subtitle Extractor
+media.manager.version=1.0 RC17
+media.manager.build=185
